--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+p{
+    text-align:center;
+}
+#nav a{
+    color:#602338;
+    display:block;
+}
 #nav a:hover{
-    background-color: #45ffc6;
+    background-color: #ffa038;
+    color:#fff;
 }
